// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Validator /> #defaultState 1`] = `
Object {
  "isValid": true,
  "lastValidatedValue": undefined,
  "message": null,
}
`;

exports[`<Validator /> passes the correct params to child function 1`] = `
Object {
  "clearValidation": [Function],
  "isValid": true,
  "message": null,
  "validate": [Function],
}
`;

exports[`<Validator /> renders it child function's component directly 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div
    className="test-child"
/>,
  "nodes": Array [
    <div
      className="test-child"
/>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance":  {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <Validator>
        [Function]
</Validator>,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": Validator {
        "_reactInternalInstance": [Circular],
        "clearValidation": [Function],
        "context": Object {
          "validator": undefined,
        },
        "id": undefined,
        "props": Object {
          "children": [Function],
        },
        "refs": Object {},
        "state": Object {
          "isValid": true,
          "lastValidatedValue": undefined,
          "message": null,
        },
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
        "validate": [Function],
        "validator": undefined,
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div
          className="test-child"
/>,
        "_debugID": 2,
        "_renderedOutput": <div
          className="test-child"
/>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Validator>
    [Function]
</Validator>,
}
`;
